# maverick

./: .gitignore  AGENTS.md  CLAUDE.md  HEALTH_REPORT.md  MASTER-PLAN.md  PRD.md  README.md  SYSTEM-DESIGN.md  getmaverick.sh  package.json  playwright.config.ts  todo.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  e2e-nightly.yml
docs/superpowers/plans/: 2026-05-22-kanban-composer.md  2026-05-22-settings-ui-redesign.md  2026-05-23-editor-tabs-toolbar.md  2026-05-23-project-settings.md  2026-05-26-first-run-bootstrap.md  2026-05-27-backend-selector-and-ai-preferences.md
docs/superpowers/specs/: 2026-05-20-maverick-core-setup-design.md  2026-05-21-settings-ui-redesign-design.md  2026-05-22-kanban-composer-design.md  2026-05-23-editor-tabs-toolbar-design.md  2026-05-23-project-settings-design.md  2026-05-26-first-run-bootstrap-design.md  2026-06-10-dashboard-token-tracking-design.md  2026-06-10-worktree-flow-and-scm-design.md
e2e/: golden-path.spec.ts
scripts/: build-sidecar.ts
sidecar/: attachment-store.test.ts  attachment-store.ts  automation-runner.test.ts  automation-runner.ts  caffeinate.test.ts  caffeinate.ts  commit-message.test.ts  commit-message.ts  config-loader.test.ts  config-loader.ts  context-tracker.test.ts  context-tracker.ts  deps.test.ts  deps.ts  diff-reader.test.ts  diff-reader.ts  file-reader.test.ts  file-reader.ts  file-search.test.ts  file-search.ts  file-tree.test.ts  file-tree.ts  fs-watcher.test.ts  fs-watcher.ts  git-module.test.ts  git-module.ts  git-provider.test.ts  git-provider.ts  index.test.ts  index.ts  instructions-resolver.test.ts  instructions-resolver.ts  kanban-store.test.ts  kanban-store.ts  log-ring.test.ts  log-ring.ts  main.ts  mcp-manager.test.ts  mcp-manager.ts  name-generator.test.ts  (+26 more)
sidecar/migrations/: 001_initial.sql  002_kanban_presets_repo.sql  003_indexes.sql  004_kanban_composer.sql  005_workspace_title.sql
src/: App.test.tsx  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  DISTRIBUTION.md  Info.plist  tauri.conf.json
src-tauri/capabilities/: browser.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend_detector.rs  bootstrap.rs  lib.rs  main.rs  pty.rs  sidecar.rs  state.rs
src-tauri/src/commands/: attachment.rs  automation.rs  bootstrap.rs  browser.rs  caffeinate.rs  config.rs  context.rs  diff.rs  file_tree.rs  git.rs  instructions.rs  kanban.rs  mcp.rs  messages.rs  mod.rs  notify.rs  pr.rs  preset.rs  project.rs  project_settings.rs  pty.rs  remote.rs  shell.rs  skills.rs  usage.rs  workspace.rs
src-tauri/src/pty/: da_filter.rs  mod.rs  ring.rs  utf8_carry.rs
src-tauri/src/remote/: agent_event.rs  agent_host.rs  auth.rs  auth_session.rs  bridge.rs  connection.rs  device_store.rs  hook_server.rs  mod.rs  pairing.rs  protocol.rs  session_registry.rs  transport.rs  ws_server.rs
src-tauri/src/remote/adapters/: claude.rs  codex.rs  heuristic.rs  mod.rs
src-tauri/tests/: jsonrpc_framing.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
src/components/activitybar/: ActivityBar.test.tsx  ActivityBar.tsx  ActivityBarItem.test.tsx  ActivityBarItem.tsx
src/components/auxiliarybar/: AuxiliaryBar.test.tsx  AuxiliaryBar.tsx  DiffView.test.tsx  DiffView.tsx  FilesView.test.tsx  FilesView.tsx  PreviewView.test.tsx  PreviewView.tsx  SourceControlView.test.tsx  SourceControlView.tsx
src/components/editor/: AgentStatusPill.test.tsx  AgentStatusPill.tsx  EditorArea.test.tsx  EditorArea.tsx  EditorGroup.test.tsx  EditorGroup.tsx  EditorTab.test.tsx  EditorTab.tsx  EditorTabs.test.tsx  EditorTabs.tsx  EmptyEditor.reduced.test.tsx  EmptyEditor.test.tsx  EmptyEditor.tsx  SaveLayoutDialog.test.tsx  SaveLayoutDialog.tsx  WorkspaceEditor.test.tsx  WorkspaceEditor.tsx
src/components/notifications/: Toaster.test.tsx  Toaster.tsx
src/components/panel/: BottomTerminal.test.tsx  BottomTerminal.tsx  Panel.test.tsx  Panel.tsx  PanelTabs.test.tsx  PanelTabs.tsx
src/components/primarysidebar/: CreateFromDialog.test.tsx  CreateFromDialog.tsx  DashboardView.test.tsx  DashboardView.tsx  PrimarySideBar.test.tsx  PrimarySideBar.tsx  ProjectItem.test.tsx  ProjectItem.tsx  ProjectsView.test.tsx  ProjectsView.tsx  WorkspaceItem.test.tsx  WorkspaceItem.tsx
src/components/quickopen/: CommandPalette.test.tsx  CommandPalette.tsx  QuickOpen.test.tsx  QuickOpen.tsx
src/components/settings-shell/: SettingsShell.test.tsx  SettingsShell.tsx  index.ts
src/components/statusbar/: CaffeinateToggle.test.tsx  CaffeinateToggle.tsx  NotificationBell.test.tsx  NotificationBell.tsx  StatusBar.test.tsx  StatusBar.tsx  (+2 more)
src/hooks/: useAgentStatus.test.ts  useAgentStatus.ts  useConfig.test.tsx  useConfig.ts  useContextUsage.test.tsx  useContextUsage.ts  useFileTree.test.tsx  useFileTree.ts  useFirstRun.test.ts  useFirstRun.ts  useOSPlatform.test.tsx  useOSPlatform.ts  usePresets.test.tsx  usePresets.ts  usePty.test.tsx  usePty.ts  useResponsiveLayout.test.tsx  useResponsiveLayout.ts  useScriptRunner.test.tsx  useScriptRunner.ts  useSkills.test.tsx  useSkills.ts  useSourceControl.test.tsx  useSourceControl.ts  useTerminalTab.test.ts  useTerminalTab.ts  useTheme.test.tsx  useTheme.ts  useUpdater.test.tsx  useUpdater.ts  useWindowFocus.test.tsx  useWindowFocus.ts  useWorkspace.test.tsx  useWorkspace.ts
src/lib/: ai-review.test.ts  ai-review.ts  backend-brand.tsx  build-info.test.ts  build-info.ts  context-usage.test.ts  context-usage.ts  default-cwd.test.ts  default-cwd.ts  dialog.test.ts  dialog.ts  file-drop.test.ts  file-drop.ts  ipc.test.ts  ipc.ts  notification-route.test.ts  notification-route.ts  os-notify.test.ts  os-notify.ts  splitnode.test.ts  splitnode.ts  tauri.test.ts  tauri.ts  terminal-provider.test.ts  terminal-provider.ts  utils.test.ts
src/shortcuts/: registry.test.ts  registry.ts  useShortcuts.test.tsx  useShortcuts.ts
src/state/: store.test.ts  store.ts
src/styles/: fonts.css  globals.css  tokens.css
src/test/: fixtures.ts  mocks.ts  setup.ts  utils.tsx
src/themes/: theme-card.tsx  theme-provider.test.tsx  theme-provider.tsx  types.test.ts  types.ts
(+218 files in other folders)
