[package]
name = "maverick"
version = "0.1.0"
description = "Maverick — AI IDE Orchestrator"
authors = ["Malhar Ujawane"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maverick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables embedded child webviews (Window::add_child) used by the Browser panel.
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-log = "2"
anyhow = "1"
thiserror = "2"
dashmap = "6"
once_cell = "1"
which = "6"
dirs = "5"
portable-pty = "0.8"
# remote: faithful serde port of the Swift MaverickProtocol wire contract.
base64 = "0.22"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
