[package]
name = "maverick"
version = "0.1.0"
description = "Maverick — AI IDE Orchestrator"
authors = ["Malhar Ujawane"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maverick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables embedded child webviews (Window::add_child) used by the Browser panel.
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-log = "2"
anyhow = "1"
thiserror = "2"
dashmap = "6"
once_cell = "1"
which = "6"
dirs = "5"
portable-pty = "0.8"
# remote: faithful serde port of the Swift MaverickProtocol wire contract.
base64 = "0.22"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
# Companion-3 WebSocket server. tokio-tungstenite is a thin (~80 KB compiled)
# async binding over tungstenite (RFC 6455) on the tokio runtime Tauri already
# pulls in via `tokio = { features = ["full"] }`; no new TLS stack (loopback-only,
# plaintext). futures-util gives StreamExt/SinkExt to split the socket.
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# async trait methods on the SidecarRequest abstraction (lets unit tests inject a
# deterministic fake sidecar instead of a live Bun process). Compile-time only.
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
# `test` enables tauri::test::mock_app for exercising commands headlessly.
tauri = { version = "2", features = ["test"] }
# `test-util` enables tokio's paused-clock (`time::advance`, `start_paused`) so
# the hook-bridge permission-timeout test asserts the 30 s auto-deny in virtual
# time, deterministically and instantly (no real 30 s wait). Dev/test only.
tokio = { version = "1", features = ["full", "test-util"] }
